# critic

./: .copier-answers-py.yaml  .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  env-config.yaml  hatch.toml  mise.toml  mu-ci.toml  mu-qa.toml  mu.toml  noxfile.py  prompt.md  pyproject.toml  readme.md  ruff.toml
.github/workflows/: nox.yaml
docs/: architecture.md  infrastructure.md  testing.md
documentation/: architecture.md  flow_chart.md  table_research.md
src/: lambda_handler.py
src/critic/: alerts.py  app.py  cli.py  forms.py  models.py  monitor_utility.py  tables.py  tasks.py
src/critic/Monitor/: MonitorIn.py
src/critic/libs/: assertions.py  ddb.py  dt.py  mailgun.py  scheduler.py  slack.py  store.py  testing.py  uptime.py
src/critic/tasks/: run_checks.py
src/critic/templates/: base.html  create.html  create_monitor.html  create_project.html  dashboard.html  delete.html
src/critic_tests/: conftest.py  monitor_test.py  pytest_fixtures.py  run_checks_tests.py  test_ddb.py  test_run_checks.py  test_run_due_checks.py
src/critic_tests/test_libs/: test_ddb.py  test_scheduler.py
tasks/: bump
terraform/: dynamodb.tf  github_actions.tf  iam.tf  main.tf
tests/critic_tests/: conftest.py  test_alerts.py  test_app.py  test_assertions.py  test_cli.py  test_ddb.py  test_models.py  test_monitor_utility.py  test_run_checks.py  test_tasks.py
tests/critic_tests/test_libs/: Model_factory.py  test_ddb.py  test_uptime.py
