[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'Critic'
authors = [
    {name = 'Caleb Syring', email = 'caleb.syring@level12.io'},
]
requires-python = '~=3.13.0'
dynamic = ['version']
readme = 'readme.md'
dependencies = [
    "aws-mu>=0.20251205.5",
    "boto3>=1.40.31",
    "flask>=3.1.2",
    "moto[all]>=5.1.14",
    "pydantic>=2.7",
    "httpx>=0.27",
    "polyfactory>=3.2.0",
]


[project.scripts]
'critic' = 'critic.cli:main'


[dependency-groups]
dev = [
    {include-group = "pytest"},
    {include-group = "pre-commit"},
    {include-group = "audit"},
    {include-group = "nox"},
    'click',
    "env-config-cli>=0.20250626.2",
    'hatch',
    "pytest-httpx>=0.36.0",
    "ruff",
]
# Used by nox
pytest = [
    "freezegun>=1.5.5",
    'pytest',
    'pytest-cov',
    'respx>=0.21',
    "pytest-httpx>=0.36.0",
]
# Used by nox
pre-commit = [
    'pre-commit',
    'pre-commit-uv',
]
# Used by nox
audit = [
    'pip-audit',
]
# Used by CI
nox = [
    'nox',
]
